# manhwa_tool

./: .gitignore  Dockerfile  README.md  build.bat  build.sh  config.yaml  config_loader.py  docker-compose.yml  main.py  pyproject.toml  run.bat  run.sh  session.py
commands/: cmd_000_selectionner_chapitre.py  cmd_001_creer_chapitre.py  cmd_002_fusion_globale.py  cmd_003_fusion_par_groupe.py  cmd_004_upscale_realesrgan.py  cmd_005_extraction_cbz.py  cmd_006_pipeline_complet.py  cmd_007_avancement.py  cmd_008_parametres.py  cmd_009_notes_chapitre.py  cmd_010_surveiller_raw.py  cmd_011_export_intelligent.py
core/: archive_manager.py  cbz_handler.py  changelog.py  exporter.py  integrity_checker.py  project_manager.py  role_manager.py  slicer.py  status_manager.py  utils.py  watcher.py
docker/: entrypoint.sh  env.example
tests/: conftest.py  test_archive_manager.py  test_cbz_handler.py  test_changelog.py  test_cmd003_recomposition.py  test_cmd_010_auto_pipeline.py  test_commands.py  test_core.py  test_docker.py  test_integrity_checker.py  test_project_manager.py  test_role_manager.py  test_status_manager.py  test_ui_screens.py  test_watcher.py
ui/: app.py  app_css.py  colors.py  menu_engine.py  modals.py  notify.py  progress_bar.py  table_renderer.py
ui/screens/: __init__.py  screen_avancement.py  screen_cbz_alert.py  screen_main_menu.py  screen_notes.py  screen_parametres.py  screen_pipeline.py  screen_progression.py  screen_select_project.py  screen_select_role.py  screen_setup.py
ui/widgets/: __init__.py  breadcrumb.py  progress_bar.py  status_table.py
