[project]
name = "manhwa-tool"
version = "2.0.0"
description = "Outil console de gestion de workflow scanlation manhwa"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "readchar>=4.0.5",
    "watchdog>=4.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
manhwa-tool = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-v"
